--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -2253,5 +2253,8 @@
     <Image Include="res\convert.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\audiomap.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
