- make aspect ratio be a per-game setting

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -906,9 +906,9 @@ BEGIN
     CONTROL         "Draw pic polygons as dotted",IDC_CHECKSCI01,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,80,118,10
     CONTROL         "Play sound when compile fails",IDC_COMPILEERRORSOUND,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,94,116,10
-    CONTROL         "Use original SCI aspect ratio",IDC_CHECK_ASPECTRATIO,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,108,106,10
-    CONTROL         "Show tabs in script editor",IDC_CHECK_SHOWTABS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,123,97,10
+    CONTROL         "Use original SCI aspect ratio by default\n(can be set per game)",IDC_CHECK_ASPECTRATIO,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,9,108,138,19
+    CONTROL         "Show tabs in script editor",IDC_CHECK_SHOWTABS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,134,97,10
     EDITTEXT        IDC_FAKEEGOX,97,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_FAKEEGOY,133,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "x",IDC_STATIC,126,10,8,8,SS_CENTERIMAGE
@@ -1149,26 +1149,28 @@ BEGIN
     CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,246,172,12
 END
 
-IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 351, 140
+IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 351, 172
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTEXTHELP
 CAPTION "Game properties"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,232,119,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,294,119,50,14
+    DEFPUSHBUTTON   "OK",IDOK,232,151,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,294,151,50,14
     LTEXT           "Game &name:",IDC_STATICGAMENAME,25,24,41,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDITGAMENAME,74,21,208,14,ES_AUTOHSCROLL
-    LTEXT           "&Executable:",IDC_STATICEXE,26,81,40,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITEXECUTABLE,74,78,208,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,294,78,47,14
-    GROUPBOX        "General",IDC_STATICGENERAL,6,7,338,110
-    EDITTEXT        IDC_EDITEXECUTABLEPARAMETERS,74,99,208,14,ES_AUTOHSCROLL
-    LTEXT           "Exe params:",IDC_STATICEXEPARAM,25,102,41,8,0,WS_EX_RIGHT
-    LTEXT           "Active &profile:",IDC_STATICPROFILE,15,61,51,8,0,WS_EX_RIGHT
-    COMBOBOX        IDC_COMBOPROFILE,74,59,76,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Script Language:",IDC_STATIC4,8,42,58,8,0,WS_EX_RIGHT
     COMBOBOX        IDC_COMBOLANGUAGE,74,40,76,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Active &profile:",IDC_STATICPROFILE,15,61,51,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBOPROFILE,74,59,76,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Use original Sierra aspect ratio (4x3)",IDC_CHECKASPECTRATIO,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,74,79,208,10
+    LTEXT           "&Executable:",IDC_STATICEXE,26,100,40,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITEXECUTABLE,74,97,208,14,ES_AUTOHSCROLL
+    LTEXT           "Exe params:",IDC_STATICEXEPARAM,25,121,41,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITEXECUTABLEPARAMETERS,74,118,208,14,ES_AUTOHSCROLL
+    GROUPBOX        "General",IDC_STATICGENERAL,6,7,338,134
+    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,294,97,47,14
 END
 
 IDD_CLASSBROWSERDIALOG DIALOGEX 0, 0, 454, 293
@@ -2326,7 +2328,7 @@ BEGIN
         VERTGUIDE, 74
         VERTGUIDE, 282
         TOPMARGIN, 7
-        BOTTOMMARGIN, 133
+        BOTTOMMARGIN, 165
     END
 
     IDD_CLASSBROWSERDIALOG, DIALOG
