- support for Companion debugging in SCI0 template game

--- a/SCICompanion/Files/TemplateGame/SCI0/game.ini
+++ b/SCICompanion/Files/TemplateGame/SCI0/game.ini
@@ -6,6 +6,8 @@
 [Game]
 ScummId=sci-fanmade
 UseSierraAspectRatio=false
+Name=New Game
+Language=sc
 
 [View]
 n000=Ego
@@ -46,6 +48,7 @@ n998=Feature
 n999=Obj
 n800=TitleScreen
 n001=rm001
+n972=DebugOut
 
 [Cursor]
 n997=Loading
