- gamma correction support for bitmap-to-pic - some doc updates

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1130,7 +1130,8 @@ BEGIN
     CONTROL         "Special",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,367,215,38,10
     CONTROL         "Weighted RGB",IDC_RADIO4,"Button",BS_AUTORADIOBUTTON,367,227,62,10
     CONTROL         "RGB/HSL mix",IDC_RADIO5,"Button",BS_AUTORADIOBUTTON,367,239,57,10
-    GROUPBOX        "Color matching",IDC_STATICGROUP4,359,179,96,73
+    CONTROL         "Gamma correction",IDC_GAMMACORRECTED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,367,251,73,10
+    GROUPBOX        "Color matching",IDC_STATICGROUP4,359,179,96,84
     EDITTEXT        IDC_EDITSTATUS,7,139,209,14,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "",IDC_PROGRESSCONVERT,"msctls_progress32",WS_BORDER,247,139,209,14
     LTEXT           "Brightness:",IDC_STATIC1,22,171,40,8
