- gamma correction for view imports too

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1580,8 +1580,9 @@ BEGIN
     CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,257,87,12
     COMBOBOX        IDC_COMBOMATCH,286,259,53,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Color match:",IDC_STATIC8,238,262,42,8
-    COMBOBOX        IDC_COMBODITHERALPHA,160,262,73,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Alpha:",IDC_STATICDITHERALPHA,135,264,22,8
+    COMBOBOX        IDC_COMBODITHERALPHA,167,277,62,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Alpha:",IDC_STATICDITHERALPHA,142,279,22,8
+    CONTROL         "Gamma corrected",IDC_GAMMACORRECTED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,134,264,76,10
 END
 
 IDD_PICHELPER DIALOGEX 0, 0, 130, 285
