- some fixes to the find-replace dialog so it wraps its search

--- a/SCICompanionLib/Src/CrystalEdit/editres.rc
+++ b/SCICompanionLib/Src/CrystalEdit/editres.rc
@@ -304,6 +304,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_EDIT_TEXT_NOT_FOUND "Cannot find string""%s"""
+    IDS_OCCURENCES          "Replaced %d occurences."
 END
 
 STRINGTABLE 
