- decompiler: remove support for !a-b and a-!b compound conditions, as these change the value of the compound condition, which causes problems for code that depends on it. Instead, these will end up as if statements - decompiler: bug in if-breaks where there was code before the break - we didn't output it!

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -1035,6 +1035,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Tools" "$(OutDir)Tools"</Command>
     <None Include="Files\TemplateGame\SCI0\src\autodoor.sc" />
     <None Include="Files\TemplateGame\SCI0\src\autodoor.sco" />
     <None Include="Files\TemplateGame\SCI0\src\Avoid.sc" />
+    <None Include="Files\TemplateGame\SCI0\src\Avoid.sco" />
     <None Include="Files\TemplateGame\SCI0\src\Controls.sc" />
     <None Include="Files\TemplateGame\SCI0\src\controls.sco" />
     <None Include="Files\TemplateGame\SCI0\src\Cycle.sc" />
