- don't produce compiler warning for "blah has no effect on code", because it was used for Sierra's games to preload stuff for perf - when a decompile is cancelled, be quicker about it - allow calls to non-existant exports to compile

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1673,23 +1673,28 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Decompile"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Close",IDCANCEL,550,282,50,14
-    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,156,289
-    PUSHBUTTON      "&Decompile",IDC_DECOMPILE,174,7,68,14
-    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,174,25,68,14
-    EDITTEXT        IDC_EDITSCRIPT,308,7,292,168,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,131,123,165
-    PUSHBUTTON      "Set Filenames",IDC_ASSIGNFILENAMES,174,92,68,14
-    PUSHBUTTON      "Cancel",IDC_DECOMPILECANCEL,257,7,40,14,WS_DISABLED
-    EDITTEXT        IDC_DECOMPILESTATUS,308,282,207,14,ES_AUTOHSCROLL | ES_READONLY
+    DEFPUSHBUTTON   "&Decompile",IDC_DECOMPILE,174,7,68,14
+    CONTROL         "Re-decompile when globals change",IDC_CHECKREDECOMPILE,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,188,31,82,23
+    PUSHBUTTON      "Reset Filenames",IDC_ASSIGNFILENAMES,188,55,68,14
+    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,188,73,68,14
+    GROUPBOX        "Options",IDC_GROUPOPTIONS,174,24,123,68
+    LTEXT           "SCO:",IDC_INSTRUCTIONS,174,94,18,8
+    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,106,123,115
+    CONTROL         "Disassemble only",IDC_CHECKASM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,238,70,10
+    EDITTEXT        IDC_EDITDEBUGMATCH,185,251,68,14,ES_AUTOHSCROLL
+    CONTROL         "Debug control flow",IDC_CHECKCONTROLFLOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,267,81,10
     CONTROL         "Debug inst consumption",IDC_CHECKINSTRUCTIONCONSUMPTION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,78,97,10
-    CONTROL         "Debug control flow",IDC_CHECKCONTROLFLOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,65,81,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,281,97,10
+    GROUPBOX        "Debug",IDC_GROUPDEBUG,174,226,123,70
+    PUSHBUTTON      "Cancel",IDC_DECOMPILECANCEL,257,7,40,14,WS_DISABLED
+    EDITTEXT        IDC_EDITSCRIPT,308,7,292,168,ES_MULTILINE | ES_READONLY | WS_VSCROLL
     EDITTEXT        IDC_DECOMPILATIONRESULTS,308,180,292,78,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_PROGRESS1,"msctls_progress32",NOT WS_VISIBLE | WS_BORDER,308,263,207,14
-    EDITTEXT        IDC_EDITDEBUGMATCH,174,50,68,14,ES_AUTOHSCROLL
-    LTEXT           "SCO:",IDC_INSTRUCTIONS,174,117,18,8
-    CONTROL         "Disassemble only",IDC_CHECKASM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,40,70,10
+    EDITTEXT        IDC_DECOMPILESTATUS,308,282,207,14,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "Select All",IDC_CHECKSELECTALL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,7,156,10
+    PUSHBUTTON      "Close",IDCANCEL,550,282,50,14
+    CONTROL         "",IDC_LISTSCRIPTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,19,156,277
 END
 
 IDD_MESSAGETOOLBOX DIALOGEX 0, 0, 117, 277
