- text resource editor: keep recently added item visible and selected - docs for auto-gen text resources - postbuild: basic support for PostRepackage.cmd

--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -403,6 +403,7 @@
     <ClCompile Include="Src\Util\MidiPlayer.cpp" />
     <ClCompile Include="Src\Util\PerfTimer.cpp" />
     <ClCompile Include="Src\Util\PhonemeMap.cpp" />
+    <ClCompile Include="Src\Util\PostBuildThread.cpp" />
     <ClCompile Include="Src\Util\RGBOctree.cpp" />
     <ClCompile Include="Src\Util\RunLogic.cpp" />
     <ClCompile Include="Src\Util\ScriptConvert.cpp" />
@@ -593,6 +594,7 @@
     <ClInclude Include="Src\Util\MidiPlayer.h" />
     <ClInclude Include="Src\Util\PerfTimer.h" />
     <ClInclude Include="Src\Util\PhonemeMap.h" />
+    <ClInclude Include="Src\Util\PostBuildThread.h" />
     <ClInclude Include="Src\Util\RGBOctree.h" />
     <ClInclude Include="Src\Util\RunLogic.h" />
     <ClInclude Include="Src\Util\SortedVector.h" />
