- decompiler: optional substitution of strings for text resource tuples, and put comments in if not - decompiler: customization of which functions support that

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -75,3 +75,6 @@ Memory = [ "memType" ]
 
 [bitfieldProperties]
 bitfieldProperties = [ "style", "signal", "flags", "modifiers", "scaleSignal", "syncCue", "prevCue", "onMeCheck", "state", "type", "illegalBits" ]
+
+[textResourceTuples]
+textResourceTuples = [ "Print", "FormatPrint" ]
