--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1676,11 +1676,13 @@ BEGIN
     DEFPUSHBUTTON   "&Decompile",IDC_DECOMPILE,174,7,68,14
     CONTROL         "Re-decompile when globals change",IDC_CHECKREDECOMPILE,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,188,31,82,23
-    PUSHBUTTON      "Reset Filenames",IDC_ASSIGNFILENAMES,188,55,68,14
-    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,188,73,68,14
-    GROUPBOX        "Options",IDC_GROUPOPTIONS,174,24,123,68
-    LTEXT           "SCO:",IDC_INSTRUCTIONS,174,94,18,8
-    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,106,123,115
+    CONTROL         "Subtitute text resource tuples for strings",IDC_CHECKTEXTTUPLES,
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,188,53,100,16
+    PUSHBUTTON      "Reset Filenames",IDC_ASSIGNFILENAMES,178,73,61,14
+    PUSHBUTTON      "Clear SCO",IDC_CLEARSCO,241,73,54,14
+    GROUPBOX        "Options",IDC_GROUPOPTIONS,174,24,123,69
+    LTEXT           "SCO:",IDC_INSTRUCTIONS,174,96,18,8
+    CONTROL         "",IDC_TREESCO,"SysTreeView32",TVS_EDITLABELS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,174,108,123,113
     CONTROL         "Disassemble only",IDC_CHECKASM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,238,70,10
     EDITTEXT        IDC_EDITDEBUGMATCH,185,251,68,14,ES_AUTOHSCROLL
     CONTROL         "Debug control flow",IDC_CHECKCONTROLFLOW,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,185,267,81,10
