- basic support for managing resource as patch files

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1150,14 +1150,14 @@ BEGIN
     CONTROL         "",IDC_SLIDERHUE,"msctls_trackbar32",WS_TABSTOP,22,246,172,12
 END
 
-IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 351, 172
+IDD_GAMEPROPERTIESDIALOG DIALOGEX 0, 0, 351, 191
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTEXTHELP
 CAPTION "Game properties"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,232,151,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,294,151,50,14
+    DEFPUSHBUTTON   "OK",IDOK,232,170,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,294,170,50,14
     LTEXT           "Game &name:",IDC_STATICGAMENAME,25,24,41,8,0,WS_EX_RIGHT
     EDITTEXT        IDC_EDITGAMENAME,74,21,208,14,ES_AUTOHSCROLL
     LTEXT           "Script Language:",IDC_STATIC4,8,42,58,8,0,WS_EX_RIGHT
@@ -1166,12 +1166,14 @@ BEGIN
     COMBOBOX        IDC_COMBOPROFILE,74,59,76,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Use original Sierra aspect ratio (4x3)",IDC_CHECKASPECTRATIO,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,74,79,208,10
-    LTEXT           "&Executable:",IDC_STATICEXE,26,100,40,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITEXECUTABLE,74,97,208,14,ES_AUTOHSCROLL
-    LTEXT           "Exe params:",IDC_STATICEXEPARAM,25,121,41,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_EDITEXECUTABLEPARAMETERS,74,118,208,14,ES_AUTOHSCROLL
-    GROUPBOX        "General",IDC_STATICGENERAL,6,7,338,134
-    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,294,97,47,14
+    CONTROL         "Manage resources as patch files (good for source control)",IDC_CHECKPATCHFILES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,74,96,208,10
+    LTEXT           "&Executable:",IDC_STATICEXE,26,118,40,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITEXECUTABLE,74,115,208,14,ES_AUTOHSCROLL
+    LTEXT           "Exe params:",IDC_STATICEXEPARAM,25,139,41,8,0,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITEXECUTABLEPARAMETERS,74,136,208,14,ES_AUTOHSCROLL
+    GROUPBOX        "General",IDC_STATICGENERAL,6,7,338,151
+    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,294,115,47,14
 END
 
 IDD_CLASSBROWSERDIALOG DIALOGEX 0, 0, 454, 293
@@ -2337,7 +2339,7 @@ BEGIN
         VERTGUIDE, 74
         VERTGUIDE, 282
         TOPMARGIN, 7
-        BOTTOMMARGIN, 165
+        BOTTOMMARGIN, 184
     END
 
     IDD_CLASSBROWSERDIALOG, DIALOG
