- support for color tinting in EGA pics

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -950,20 +950,21 @@ BEGIN
     LTEXT           "",IDC_STATICSTATUS,7,65,79,11
 END
 
-IDD_DEFINEPALETTE2 DIALOGEX 0, 0, 153, 174
+IDD_DEFINEPALETTE2 DIALOGEX 0, 0, 153, 180
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Palettes"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,38,153,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,95,153,51,14
+    DEFPUSHBUTTON   "OK",IDOK,38,159,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,95,159,51,14
     CONTROL         "",IDC_PALETTETAB,"SysTabControl32",0x0,7,7,138,88
     CONTROL         "",IDC_PALETTECOLORS,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,14,23,123,67
     CONTROL         "",IDC_CHOOSECOLORSTATIC,"Static",SS_OWNERDRAW | SS_NOTIFY | WS_GROUP,15,100,123,23
     CONTROL         "Write Entire Palette",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,128,78,10
-    PUSHBUTTON      "Advanced",IDC_BUTTONADVANCED,96,129,50,14
+    PUSHBUTTON      "Choose color",IDC_BUTTONADVANCED,96,129,50,14
     CONTROL         "Preview Pic",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,140,75,10
+    PUSHBUTTON      "Adjust",IDC_BUTTONADJUST,96,144,50,14
 END
 
 IDD_DONTSHOWAGAIN DIALOGEX 0, 0, 228, 70
@@ -2216,7 +2217,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 146
         TOPMARGIN, 7
-        BOTTOMMARGIN, 167
+        BOTTOMMARGIN, 173
     END
 
     IDD_DONTSHOWAGAIN, DIALOG
