- pic editor, transform command: support for cutting points out of lines

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -724,6 +724,7 @@ BEGIN
     POPUP "main"
     BEGIN
         MENUITEM "Delete point",                ID_PIC_DELETEPOINT
+        MENUITEM "Cut line",                    ID_PIC_CUTLINE
     END
 END
 
